implement delete button, message and functioning add button

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My personal practice</title>
+    <title>Personal Practice</title>
   </head>
 
   <body>
